--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -43,7 +43,9 @@
           </a>
           <ul *ngFor="let submenuItem of item.submenu" class="collapse">
             <li>
-              <a [routerLink]="submenuItem.url">{{ submenuItem.titulo }} </a>
+              <a [routerLink]="submenuItem.url" 
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true}">{{ submenuItem.titulo }} </a>
             </li>
           </ul>
         </li>
