--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -48,3 +48,11 @@ Login register and recover password Page
     right: 0px;
     position: absolute;
     height: 100%; }
+
+.google-btn-wrapper {
+  display: flex;
+  justify-content: center;   /* centra horizontal */
+  align-items: center;       /* centra vertical si hay altura */
+  margin-top: 16px;
+  padding: 2px 13px
+}
