--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,25 +5,39 @@
     style="background-image:url(../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" 
+            <form 
+            [formGroup]="formLogin" 
+            class="form-horizontal form-material" 
             id="loginform" 
             (submit)="login()">
                 <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png"
                         alt="Home" /><br /><img src="../assets/images/logo-text.png" alt="Home" /></a>
                 <div class="form-group m-t-40">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Username">
+                        <input class="form-control" type="email" formControlName="email" placeholder="Email">
+                        <small class="text-danger" *ngIf="error('email','required')">
+                          * El email es obligatorio
+                        </small>
+                        <small class="text-danger" *ngIf="error('email','email')">
+                          * El email no tiene un formato válido
+                        </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password">
+                        <input class="form-control" type="password" formControlName="password" placeholder="Password">
+                         <small class="text-danger" *ngIf="error('password','required')">
+                          * La contraseña es obligatoria
+                        </small>
+                        <small class="text-danger" *ngIf="error('password','minlength')">
+                          * Mínimo 6 caracteres
+                        </small>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary pull-left p-t-0">
-                            <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
+                            <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue" formControlName="recorardarme">
                             <label for="checkbox-signup"> Remember me </label>
                         </div>
                         <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i
@@ -37,17 +51,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-                        <div class="social"><a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip"
-                                title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a> <a
-                                href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip"
-                                title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a>
-                        </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center google-btn-wrapper">
+                        <div #googleBtn></div>
                     </div>
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        Don't have an account? <a href="pages-register2.html" class="text-primary m-l-5"><b>Sign
+                        Don't have an account? <a routerLink="/auth/register" class="text-primary m-l-5"><b>Sign
                                 Up</b></a>
                     </div>
                 </div>
