--- a/src/app/auth/resgister/resgister.component.html
+++ b/src/app/auth/resgister/resgister.component.html
@@ -5,47 +5,80 @@
     style="background-image:url(../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+            <form [formGroup]="formRegister" class="form-horizontal form-material" id="loginform" (submit)="crearUsuario()">
                 <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png"
                         alt="Home" /><br /><img src="../assets/images/logo-text.png" alt="Home" /></a>
                 <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
                 <div class="form-group m-t-20">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Name">
+                        <input class="form-control" type="text" formControlName="nombre"  placeholder="Name">
+                        <small class="text-danger" *ngIf="error('nombre','required')">
+                          * El nombre es obligatorio
+                        </small>
+                        <small class="text-danger" *ngIf="error('nombre','minlength')">
+                          * El nombre debe tener al menos 3 caracteres
+                        </small>
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
+                        <input class="form-control" type="text" formControlName="email" placeholder="Email">
+                        <small class="text-danger" *ngIf="error('email','required')">
+                          * El email es obligatorio
+                        </small>
+                        <small class="text-danger" *ngIf="error('email','email')">
+                          * El email no tiene un formato válido
+                        </small>
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password">
+                        <input class="form-control" type="password" formControlName="password" placeholder="Password">
+                        <small class="text-danger" *ngIf="error('password','required')">
+                          * La contraseña es obligatoria
+                        </small>
+                        <small class="text-danger" *ngIf="error('password','minlength')">
+                          * Mínimo 6 caracteres
+                        </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Confirm Password">
+                        <input class="form-control" type="password" formControlName="password2" placeholder="Confirm Password">
+                        <small class="text-danger" *ngIf="error('password2','required')">
+                          * La confirmación es obligatoria
+                        </small>
+                        <small class="text-danger" *ngIf="error('password2','minlength')">
+                          * Mínimo 6 caracteres
+                        </small>
+
+                        <small class="text-danger" *ngIf="mostrarErrorPasswords()">
+                          * Las contraseñas deben ser iguales
+                        </small>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary p-t-0">
-                            <input id="checkbox-signup" type="checkbox">
+                            <input id="checkbox-signup" type="checkbox" formControlName="terminos">
                             <label for="checkbox-signup"> I agree to all <a href="#">Terms</a></label>
+                            <small class="text-danger" *ngIf="error('terminos','required') || error('terminos','requiredTrue')">
+                              * Debes aceptar los términos y condiciones
+                            </small>
                         </div>
                     </div>
                 </div>
+
                 <div class="form-group text-center m-t-20">
                     <div class="col-xs-12">
                         <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
+                            [disabled]="formRegister.invalid && (formRegister.dirty || formRegister.touched)"
                             type="submit">Sign Up</button>
                     </div>
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>Already have an account? <a href="pages-login-2.html" class="text-info m-l-5"><b>Sign
+                        <p>Already have an account? <a routerLink="/auth/login" class="text-info m-l-5"><b>Sign
                                     In</b></a></p>
                     </div>
                 </div>
