--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -216,7 +216,7 @@
                             <li role="separator" class="divider"></li>
                             <li><a routerLink="account"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a routerLink="/auth/login"><i class="fa fa-power-off"></i> Logout</a></li>
+                            <li><a (click)="logout()" class="cursor"><i class="fa fa-power-off"></i> Logout</a></li>
                         </ul>
                     </div>
                 </li>
