--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
             <li><a href="javascript:void()">My Balance</a></li>
             <li><a href="javascript:void()">Inbox</a></li>
             <li><a routerLink="account">Account Setting</a></li>
-            <li><a routerLink="/auth/login">Logout</a></li>
+            <li><a (click)="logout()" class="cursor">Logout</a></li>
           </ul>
         </li>
         <li class="nav-devider"></li>
