--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,32 @@
 #themecolors .selector, .cursor {
   cursor: pointer; 
 }
+
+.w100 {
+  width: 100px;
+}
+
+.w140 {
+  width: 140px;
+}
+
+
+.avatar {
+  border: solid 1px #78a79f;
+  border-radius: 100%;
+  width: 75px;
+}
+
+.fondo-modal-imagen {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.oculto {
+  display: none;
+}
